--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,66 @@
+body {
+    background-color: #F8F6FD;
+    font-family: sans-serif;
+}
+
 h1 {
+    font-family: sans-serif;
     font-size: 38px;
     font-weight: 800;
     text-align: center;
 }
 
+h2 {
+    margin: 0 0 5px;
+    font-size: 28px;
+}
+
+select {
+    border-radius: 4px;
+    display: block;
+    font-size: 18px;
+    padding: 10px;
+    width: 100%;
+}
+
+.container {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2);
+    max-width: 600px;
+    margin: 60px auto;
+    padding: 30px;
+}
+
+.city {
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0;
+    padding: 30px 0;
+}
+
+.city:last-child {
+    border: none;
+}
+
+.date {
+    opacity: 0.7;
+}
+
+.time {
+    font-size: 48px;
+    font-weight: bold;
+}
+
+.time small {
+    font-size: 24px;
+    line-height: 36px;
+    vertical-align: middle;
+}
+
 footer {
+    color: rgba(0, 0, 0, 0.8);
+    font-size: 18px;
     text-align: center;
 }
